samples/_failures_safe/1761633846_a9d6ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b0017c4.c:133: error: expected ‘;’, ‘,’ or ‘)’ at end of input
